<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="app.prabudiworks.exchangerate.home.model.ConverterResponse" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_base_country"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_indonesia"
                app:layout_constraintTop_toBottomOf="@+id/tv_base_title"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_base_country"
                app:layout_constraintTop_toTopOf="@+id/iv_base_country"
                app:layout_constraintBottom_toBottomOf="@+id/iv_base_country">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.currency}"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_100"
                    tools:text="@string/IDR" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.country}"
                    android:textSize="12sp"
                    android:textColor="@color/black_100"
                    tools:text="@string/Indonesia" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.value.toString()}"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black_100"
                tools:text="@string/value_exm"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>