<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeFragment">

    <data>

        <variable
            name="vm"
            type="app.prabudiworks.exchangerate.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/ll_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Loading..."
                android:textColor="@color/black_100"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_base_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_currency"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_base_country"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_european_union"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_base_title"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_base_country"
            app:layout_constraintStart_toEndOf="@+id/iv_base_country"
            app:layout_constraintTop_toTopOf="@+id/iv_base_country">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EUR"
                android:textColor="@color/black_100"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Europe"
                android:textColor="@color/black_100"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_converter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/converter"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_base_country" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="Input Value..."
            android:inputType="numberDecimal"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_base_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_base_country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_converter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            app:items="@{vm.converterList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_converter_title"
            tools:itemCount="5"
            tools:listitem="@layout/item_list_converter" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/grp_converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rv_converter,tv_base_title,iv_base_country,tv_converter_title,et_input,linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

